# template_mizu_django

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml
core/: settings.py
